--- a/papier-kamien-nozyce/style.css
+++ b/papier-kamien-nozyce/style.css
@@ -1,6 +1,11 @@
-.buttons{
+#buttons, #result{
     text-align: center;
-
+}
+input{
+    margin-right:75px;
+    margin-left: 75px;
+    width: 300px;
+    height: 300px;
 }
 
 #wynik{
@@ -8,14 +13,18 @@
     font-family: "Monospace";
     font-size: 50px;
     font-weight: bold;
-    color:#3f6c8f;
+    color:#080f12;
+    padding: 20px;
+    background-color: white;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    margin-top: 5px;
+    width: 50%;
 
-    @keyframes grow {
-        from {
-            transform: scale(1);
-        }
-        to {
-            transform: scale(4.333);
-        }
-    }
+}
+
+body{
+    background-image: url("img/background.jpg");
+    background-repeat: no-repeat;
 }
