--- a/dzik/style.css
+++ b/dzik/style.css
@@ -11,7 +11,7 @@ body
 h1{font-size: 60px;}
 h1{font-size: 45px;}
 
-div
+.d
 {
     width: 60%;
     border: 3px;
@@ -40,4 +40,30 @@ img
 {
     width: 200px;
     margin-right: 20px;
+}
+
+#wynik
+{
+    margin-top: 0px;
+    margin-bottom: 5px;
+    font-size: 40px;
+}
+
+
+button {
+    background-color: cadetblue;
+    border: none;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block; 
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color:cornflowerblue;
 }
